--- a/package.json
+++ b/package.json
@@ -3,24 +3,96 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier-fix": "prettier --write .",
+    "stripe:login": "stripe login",
+    "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks",
+    "stripe:fixtures": "stripe fixtures fixtures/stripe-fixtures.json",
+    "supabase:start": "npx supabase start",
+    "supabase:stop": "npx supabase stop",
+    "supabase:status": "npx supabase status",
+    "supabase:restart": "npm run supabase:stop && npm run supabase:start",
+    "supabase:reset": "npx supabase db reset",
+    "supabase:link": "npx supabase link",
+    "supabase:generate-types": "npx supabase gen types typescript --local --schema public > types_db.ts",
+    "supabase:generate-migration": "npx supabase db diff | npx supabase migration new",
+    "supabase:generate-seed": "npx supabase db dump --data-only -f supabase/seed.sql",
+    "supabase:push": "npx supabase db push",
+    "supabase:pull": "npx supabase db pull"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "^0.0.22",
+    "@stripe/stripe-js": "2.4.0",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.43.4",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.0.5",
+    "github-slugger": "^2.0.0",
+    "global": "^4.4.0",
+    "gray-matter": "^4.0.3",
+    "gsap": "^3.12.5",
+    "intl": "^1.2.5",
+    "lottie-react": "^2.4.0",
+    "lucide-react": "^0.417.0",
+    "marked": "^11.2.0",
+    "next": "14.2.6",
+    "next-intl": "^3.17.6",
+    "next-mdx-remote": "^4.4.1",
+    "next-video": "^0.11.2",
+    "normalize-css": "^2.3.1",
+    "popmotion": "^11.0.5",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "react-email": "^2.1.1",
+    "react-hook-form": "^7.49.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^8.30.0",
+    "react-lite-youtube-embed": "^2.4.0",
+    "react-merge-refs": "^2.1.1",
+    "react-svg": "^16.1.33",
+    "rehype-slug": "^6.0.0",
+    "resend": "^3.2.0",
+    "rtl-detect": "^1.1.2",
+    "stripe": "^14.25.0",
+    "supabase": "^1.190.0",
+    "svg-url-loader": "^8.0.0",
+    "svix": "^1.15.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.161.0",
+    "uploadthing": "^6.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/rtl-detect": "^1.0.3",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "eslint-config-next": "14.2.6",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-tailwindcss": "^3.17.3",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.5"
   }
 }
